python_add_json_path

--- a/export_try_1-10.ipynb
+++ b/export_try_1-10.ipynb
@@ -3,101 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ab3c38b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <style>\n",
-       "                .geemap-dark {\n",
-       "                    --jp-widgets-color: white;\n",
-       "                    --jp-widgets-label-color: white;\n",
-       "                    --jp-ui-font-color1: white;\n",
-       "                    --jp-layout-color2: #454545;\n",
-       "                    background-color: #383838;\n",
-       "                }\n",
-       "\n",
-       "                .geemap-dark .jupyter-button {\n",
-       "                    --jp-layout-color3: #383838;\n",
-       "                }\n",
-       "\n",
-       "                .geemap-colab {\n",
-       "                    background-color: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "\n",
-       "                .geemap-colab .jupyter-button {\n",
-       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "            </style>\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Earth Engine initialized with Service Account\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7030d205",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <style>\n",
-       "                .geemap-dark {\n",
-       "                    --jp-widgets-color: white;\n",
-       "                    --jp-widgets-label-color: white;\n",
-       "                    --jp-ui-font-color1: white;\n",
-       "                    --jp-layout-color2: #454545;\n",
-       "                    background-color: #383838;\n",
-       "                }\n",
-       "\n",
-       "                .geemap-dark .jupyter-button {\n",
-       "                    --jp-layout-color3: #383838;\n",
-       "                }\n",
-       "\n",
-       "                .geemap-colab {\n",
-       "                    background-color: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "\n",
-       "                .geemap-colab .jupyter-button {\n",
-       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "            </style>\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a1526f8d",
    "metadata": {},
    "outputs": [
@@ -144,16 +49,25 @@
     }
    ],
    "source": [
-    "import ee\n",
+    "# import ee\n",
     "\n",
-    "SERVICE_ACCOUNT = \"gee-map-bot@your-project.iam.gserviceaccount.com\"\n",
-    "KEY_FILE = r\"C:\\Users\\semro\\OneDrive - Delft University of Technology\\Shoreline_change\\gee-leaflet-map-57cb3c98a2b8.json\"\n",
+    "# SERVICE_ACCOUNT = \"gee-map-bot@your-project.iam.gserviceaccount.com\"\n",
+    "# KEY_FILE = r\"C:\\Users\\semro\\OneDrive - Delft University of Technology\\Shoreline_change\\gee-leaflet-map-57cb3c98a2b8.json\"\n",
+    "\n",
+    "# credentials = ee.ServiceAccountCredentials(SERVICE_ACCOUNT, KEY_FILE)\n",
+    "# ee.Initialize(credentials)\n",
+    "\n",
+    "# print(\"✅ Earth Engine initialized with Service Account\")\n",
+    "\n",
+    "import ee, os\n",
+    "\n",
+    "SERVICE_ACCOUNT = os.environ.get(\"GEE_SERVICE_ACCOUNT\")\n",
+    "KEY_FILE = \"key.json\"   # GitHub Actions writes the secret here\n",
     "\n",
     "credentials = ee.ServiceAccountCredentials(SERVICE_ACCOUNT, KEY_FILE)\n",
     "ee.Initialize(credentials)\n",
     "\n",
     "print(\"✅ Earth Engine initialized with Service Account\")\n",
-    "\n",
     "\n",
     "import geemap.foliumap as geemap\n",
     "import folium\n",
