--- a/export_try_1-10.ipynb
+++ b/export_try_1-10.ipynb
@@ -456,7 +456,7 @@
     "    legend_html += \"</div>\"\n",
     "    m.get_root().html.add_child(folium.Element(legend_html))\n",
     "\n",
-    "add_folium_legend(Map, \"NIEUWE MAP!!!!!!!!!!!!!Mangrove Loss in the <br> Mekong Delta (1984-2025)\", legend_dict, style=style)\n",
+    "add_folium_legend(Map, \"NIEUWE DAG met MAP!!!!!!!!!!!!!Mangrove Loss in the <br> Mekong Delta (1984-2025)\", legend_dict, style=style)\n",
     "\n",
     "# ------------- Add scalebar  ----------------------------\n",
     "\n",
