--- a/tryout_goal_LOSS_add_breakwater2.ipynb
+++ b/tryout_goal_LOSS_add_breakwater2.ipynb
@@ -5,12 +5,38 @@
    "execution_count": 1,
    "id": "e10a17b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'key.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      9\u001b[39m SERVICE_ACCOUNT = os.environ.get(\u001b[33m\"\u001b[39m\u001b[33mGEE_SERVICE_ACCOUNT\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     10\u001b[39m KEY_FILE = \u001b[33m\"\u001b[39m\u001b[33mkey.json\u001b[39m\u001b[33m\"\u001b[39m   \u001b[38;5;66;03m# GitHub Actions writes the secret here\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m credentials = \u001b[43mee\u001b[49m\u001b[43m.\u001b[49m\u001b[43mServiceAccountCredentials\u001b[49m\u001b[43m(\u001b[49m\u001b[43mSERVICE_ACCOUNT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mKEY_FILE\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     13\u001b[39m ee.Initialize(credentials)\n\u001b[32m     15\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m✅ Earth Engine initialized with Service Account\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\semro\\miniconda3\\envs\\gee-env2\\Lib\\site-packages\\ee\\_helpers.py:48\u001b[39m, in \u001b[36mServiceAccountCredentials\u001b[39m\u001b[34m(email, key_file, key_data)\u001b[39m\n\u001b[32m     46\u001b[39m \u001b[38;5;66;03m# Assume anything that doesn't end in '.pem' is a JSON key.\u001b[39;00m\n\u001b[32m     47\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m key_file \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m key_file.endswith(\u001b[33m'\u001b[39m\u001b[33m.pem\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m48\u001b[39m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mservice_account\u001b[49m\u001b[43m.\u001b[49m\u001b[43mCredentials\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfrom_service_account_file\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     49\u001b[39m \u001b[43m      \u001b[49m\u001b[43mkey_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscopes\u001b[49m\u001b[43m=\u001b[49m\u001b[43moauth\u001b[49m\u001b[43m.\u001b[49m\u001b[43mSCOPES\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     51\u001b[39m \u001b[38;5;66;03m# If 'key_data' can be decoded as JSON, it's probably a raw JSON key.\u001b[39;00m\n\u001b[32m     52\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m key_data:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\semro\\miniconda3\\envs\\gee-env2\\Lib\\site-packages\\google\\oauth2\\service_account.py:260\u001b[39m, in \u001b[36mCredentials.from_service_account_file\u001b[39m\u001b[34m(cls, filename, **kwargs)\u001b[39m\n\u001b[32m    248\u001b[39m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[32m    249\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mfrom_service_account_file\u001b[39m(\u001b[38;5;28mcls\u001b[39m, filename, **kwargs):\n\u001b[32m    250\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Creates a Credentials instance from a service account json file.\u001b[39;00m\n\u001b[32m    251\u001b[39m \n\u001b[32m    252\u001b[39m \u001b[33;03m    Args:\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    258\u001b[39m \u001b[33;03m            credentials.\u001b[39;00m\n\u001b[32m    259\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m260\u001b[39m     info, signer = \u001b[43m_service_account_info\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfrom_filename\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    261\u001b[39m \u001b[43m        \u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrequire\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mclient_email\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mtoken_uri\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m    262\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    263\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mcls\u001b[39m._from_signer_and_info(signer, info, **kwargs)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\semro\\miniconda3\\envs\\gee-env2\\Lib\\site-packages\\google\\auth\\_service_account_info.py:78\u001b[39m, in \u001b[36mfrom_filename\u001b[39m\u001b[34m(filename, require, use_rsa_signer)\u001b[39m\n\u001b[32m     64\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mfrom_filename\u001b[39m(filename, require=\u001b[38;5;28;01mNone\u001b[39;00m, use_rsa_signer=\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[32m     65\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Reads a Google service account JSON file and returns its parsed info.\u001b[39;00m\n\u001b[32m     66\u001b[39m \n\u001b[32m     67\u001b[39m \u001b[33;03m    Args:\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     76\u001b[39m \u001b[33;03m            info and a signer instance.\u001b[39;00m\n\u001b[32m     77\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m78\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mio\u001b[49m\u001b[43m.\u001b[49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mr\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mutf-8\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m json_file:\n\u001b[32m     79\u001b[39m         data = json.load(json_file)\n\u001b[32m     80\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m data, from_dict(data, require=require, use_rsa_signer=use_rsa_signer)\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'key.json'"
+     ]
+    }
+   ],
    "source": [
-    "import ee\n",
-    "ee.Authenticate()\n",
-    "ee.Initialize(project='clever-gear-143215')\n",
-    "import folium\n"
+    "# import ee\n",
+    "# ee.Authenticate()\n",
+    "# ee.Initialize(project='clever-gear-143215')\n",
+    "# import folium\n",
+    "\n",
+    "\n",
+    "import ee, os\n",
+    "\n",
+    "SERVICE_ACCOUNT = os.environ.get(\"GEE_SERVICE_ACCOUNT\")\n",
+    "KEY_FILE = \"key.json\"   # GitHub Actions writes the secret here\n",
+    "\n",
+    "credentials = ee.ServiceAccountCredentials(SERVICE_ACCOUNT, KEY_FILE)\n",
+    "ee.Initialize(credentials)\n",
+    "\n",
+    "print(\"✅ Earth Engine initialized with Service Account\")"
    ]
   },
   {
@@ -47,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "79b1d3bf",
    "metadata": {},
    "outputs": [
@@ -87,6 +113,12 @@
     }
    ],
    "source": [
+    "def generate_tile_url(image, vis_params=None):\n",
+    "    \"\"\"Generate tile URL for a given EE image.\"\"\"\n",
+    "    map_id_dict = ee.Image(image).getMapId(vis_params or {})\n",
+    "    return map_id_dict[\"tile_fetcher\"].url_format\n",
+    "\n",
+    "\n",
     "# -------------- Functions -----------------------\n",
     "def get_landsat_composite(collection_id, year, aoi):\n",
     "    collection = (\n",
@@ -503,7 +535,15 @@
     "        popup=folium.Popup(popup_html, max_width=300)\n",
     "    ).add_to(seadikes_group)\n",
     "    \n",
-    "    \n",
+    "for name, (layer, color) in loss_layers.items():\n",
+    "    vis = {\"palette\": [color]}\n",
+    "    Map.addLayer(layer.updateMask(layer), vis, name)\n",
+    "    tile_urls[name] = generate_tile_url(layer, vis)\n",
+    "\n",
+    "# Save tile URLs to JSON\n",
+    "with open(\"tile_urls.json\", \"w\") as f:\n",
+    "    json.dump(tile_urls, f, indent=2)\n",
+    "  \n",
     "\n",
     "# --------------Add Legend --------------------\n",
     "legend_dict = {\n",
@@ -651,7 +691,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MDP",
+   "display_name": "gee-env2",
    "language": "python",
    "name": "python3"
   },
@@ -665,7 +705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
