--- a/tryout_goal_LOSS_add_breakwater2.ipynb
+++ b/tryout_goal_LOSS_add_breakwater2.ipynb
@@ -445,6 +445,17 @@
     "color_breakwater = \"#E6EE0F\" \n",
     "color_seadike = \"#F18D09\"\n",
     "\n",
+    "# Add loss layers with palette and generate tile URLs\n",
+    "loss_layers = {\n",
+    "    \"Mangrove loss (1984-1992)\": (loss_1984_1990, color_1984_1990),\n",
+    "    \"Mangrove loss (1992-1997)\": (loss_1990_1995, color_1990_1995),\n",
+    "    \"Mangrove loss (1997-2001)\": (loss_1995_2000, color_1995_2000),\n",
+    "    \"Mangrove loss (2001-2005)\": (loss_2000_2005, color_2000_2005),\n",
+    "    \"Mangrove loss (2005-2010)\": (loss_2005_2010, color_2005_2010),\n",
+    "    \"Mangrove loss (2010-2015)\": (loss_2010_2015, color_2010_2015),\n",
+    "    \"Mangrove loss (2015-2020)\": (loss_2015_2020, color_2015_2020),\n",
+    "    \"Mangrove loss (2020-2025)\": (loss_2020_2025, color_2020_2025),\n",
+    "}\n",
     "\n",
     "# -------------- Add loss maps-----------------\n",
     "Map.addLayer(loss_1984_1990.updateMask(loss_1984_1990), {\"palette\": [color_1984_1990]}, \"Mangrove loss (1984-1992)\")\n",
