--- a/tryout_goal_LOSS_add_breakwater2.ipynb
+++ b/tryout_goal_LOSS_add_breakwater2.ipynb
@@ -531,37 +531,37 @@
     "popup_texts_BW = [\n",
     "    '<b>Perforated dome breakwater</b>'\n",
     "    '<br>Built in 2019<br>'\n",
-    "    '<img src=\"Pictures/perforated_dome.jpg\" width=\"200px\"><br>'\n",
+    "    '<img src=\"https://github.com/semroozendaal1/gee-mekong-map/tree/7bd12f6c9e335a6dd27f356626b089bd616bec77/pictures/perforated_dome.jpg\" width=\"200px\"><br>'\n",
     "    'More information: <a href=\"https://publish.obsidian.md/livinglab/Mangrove+Living+Lab/1.+Introduction/1.1+Why+Mekong+Delta\" target=\"_blank\">Website link</a>',\n",
     "    \n",
     "    '<b>Detached riprap pillar breakwater</b>'\n",
     "    '<br>Built in 2019<br>'\n",
-    "    '<img src=\"Pictures/detached_riprap_pillar.jpg\" width=\"200px\"><br>'\n",
+    "    '<img src=\"https://github.com/semroozendaal1/gee-mekong-map/tree/7bd12f6c9e335a6dd27f356626b089bd616bec77/pictures/detached_riprap_pillar.jpg\" width=\"200px\"><br>'\n",
     "    'More information: <a href=\"https://publish.obsidian.md/livinglab/Mangrove+Living+Lab/1.+Introduction/1.1+Why+Mekong+Delta\" target=\"_blank\">Website link</a>', \n",
     "    \n",
     "    '<b>Detached riprap pillar breakwater</b>'\n",
     "    '<br>Built in 2019<br>'\n",
-    "    '<img src=\"Pictures/detached_riprap_pillar.jpg\" width=\"200px\"><br>'\n",
+    "    '<img src=\"https://github.com/semroozendaal1/gee-mekong-map/tree/7bd12f6c9e335a6dd27f356626b089bd616bec77/pictures/detached_riprap_pillar.jpg\" width=\"200px\"><br>'\n",
     "    'More information: <a href=\"https://publish.obsidian.md/livinglab/Mangrove+Living+Lab/1.+Introduction/1.1+Why+Mekong+Delta\" target=\"_blank\">Website link</a>',\n",
     "    \n",
     "    '<b>Detached riprap pillar breakwater</b>'\n",
     "    '<br>Built in 2019<br>'\n",
-    "    '<img src=\"Pictures/detached_riprap_pillar.jpg\" width=\"200px\"><br>'\n",
+    "    '<img src=\"https://github.com/semroozendaal1/gee-mekong-map/tree/7bd12f6c9e335a6dd27f356626b089bd616bec77/pictures/detached_riprap_pillar.jpg\" width=\"200px\"><br>'\n",
     "    'More information: <a href=\"https://publish.obsidian.md/livinglab/Mangrove+Living+Lab/1.+Introduction/1.1+Why+Mekong+Delta\" target=\"_blank\">Website link</a>',\n",
     "    \n",
     "    '<b>Detached riprap pillar breakwater</b>'\n",
     "    '<br>Built in 2019<br>'\n",
-    "    '<img src=\"Pictures/detached_riprap_pillar.jpg\" width=\"200px\"><br>'\n",
+    "    '<img src=\"https://github.com/semroozendaal1/gee-mekong-map/tree/7bd12f6c9e335a6dd27f356626b089bd616bec77/pictures/detached_riprap_pillar.jpg\" width=\"200px\"><br>'\n",
     "    'More information: <a href=\"https://publish.obsidian.md/livinglab/Mangrove+Living+Lab/1.+Introduction/1.1+Why+Mekong+Delta\" target=\"_blank\">Website link</a>',\n",
     "    \n",
     "    '<b>Detached riprap pillar breakwater</b>'\n",
     "    '<br>Built in 2019<br>'\n",
-    "    '<img src=\"Pictures/detached_riprap_pillar.jpg\" width=\"200px\"><br>'\n",
+    "    '<img src=\"https://github.com/semroozendaal1/gee-mekong-map/tree/7bd12f6c9e335a6dd27f356626b089bd616bec77/pictures/detached_riprap_pillar.jpg\" width=\"200px\"><br>'\n",
     "    'More information: <a href=\"https://publish.obsidian.md/livinglab/Mangrove+Living+Lab/1.+Introduction/1.1+Why+Mekong+Delta\" target=\"_blank\">Website link</a>',\n",
     "    \n",
     "    '<b>Detached riprap pillar breakwater</b>'\n",
     "    '<br>Built in 2019<br>'\n",
-    "    '<img src=\"Pictures/detached_riprap_pillar.jpg\" width=\"200px\"><br>'\n",
+    "    '<img src=\"https://github.com/semroozendaal1/gee-mekong-map/tree/7bd12f6c9e335a6dd27f356626b089bd616bec77/pictures/detached_riprap_pillar.jpg\" width=\"200px\"><br>'\n",
     "    'More information: <a href=\"https://publish.obsidian.md/livinglab/Mangrove+Living+Lab/1.+Introduction/1.1+Why+Mekong+Delta\" target=\"_blank\">Website link</a>',\n",
     "    \n",
     "]\n",
@@ -577,8 +577,8 @@
     "]\n",
     "\n",
     "# Loop through shapefiles in the folder\n",
-    "shapefiles_BW = sorted(glob.glob(\"Shapefiles_separate/*.shp\"))\n",
-    "shapefiles_SD = sorted(glob.glob(\"Shapefiles_separate_SD/*.shp\"))\n",
+    "shapefiles_BW = sorted(glob.glob(\"https://github.com/semroozendaal1/gee-mekong-map/tree/6e35e4879b37276c7bdf1b6513720061cc977cd6/Shapefile_separate/*.shp\"))\n",
+    "shapefiles_SD = sorted(glob.glob(\"https://github.com/semroozendaal1/gee-mekong-map/tree/6e35e4879b37276c7bdf1b6513720061cc977cd6/Shapefile_separate_SD/*.shp\"))\n",
     "\n",
     "for shp, popup_html in zip(shapefiles_BW, popup_texts_BW):\n",
     "    gdf = gpd.read_file(shp)\n",
