--- a/tryout_goal_LOSS_add_breakwater2.ipynb
+++ b/tryout_goal_LOSS_add_breakwater2.ipynb
@@ -577,8 +577,8 @@
     "]\n",
     "\n",
     "# Loop through shapefiles in the folder\n",
-    "shapefiles_BW = sorted(glob.glob(\"https://github.com/semroozendaal1/gee-mekong-map/tree/6e35e4879b37276c7bdf1b6513720061cc977cd6/Shapefile_separate/*.shp\"))\n",
-    "shapefiles_SD = sorted(glob.glob(\"https://github.com/semroozendaal1/gee-mekong-map/tree/6e35e4879b37276c7bdf1b6513720061cc977cd6/Shapefile_separate_SD/*.shp\"))\n",
+    "shapefiles_BW = sorted(glob.glob(\"Shapefile_separate/*.shp\"))\n",
+    "shapefiles_SD = sorted(glob.glob(\"Shapefile_separate_SD/*.shp\"))\n",
     "\n",
     "for shp, popup_html in zip(shapefiles_BW, popup_texts_BW):\n",
     "    gdf = gpd.read_file(shp)\n",
