--- a/tryout_goal_LOSS_add_breakwater2.ipynb
+++ b/tryout_goal_LOSS_add_breakwater2.ipynb
@@ -531,37 +531,37 @@
     "popup_texts_BW = [\n",
     "    '<b>Perforated dome breakwater</b>'\n",
     "    '<br>Built in 2019<br>'\n",
-    "    '<img src=\"pictures/perforated_dome.jpg\" width=\"200px\"><br>'\n",
+    "    '<img src=\"pictures/perforated_dome.JPG\" width=\"200px\"><br>'\n",
     "    'More information: <a href=\"https://publish.obsidian.md/livinglab/Mangrove+Living+Lab/1.+Introduction/1.1+Why+Mekong+Delta\" target=\"_blank\">Website link</a>',\n",
     "    \n",
     "    '<b>Detached riprap pillar breakwater</b>'\n",
     "    '<br>Built in 2019<br>'\n",
-    "    '<img src=\"detached_riprap_pillar.jpg\" width=\"200px\"><br>'\n",
+    "    '<img src=\"pictures/detached_riprap_pillar.JPG\" width=\"200px\"><br>'\n",
     "    'More information: <a href=\"https://publish.obsidian.md/livinglab/Mangrove+Living+Lab/1.+Introduction/1.1+Why+Mekong+Delta\" target=\"_blank\">Website link</a>', \n",
     "    \n",
     "    '<b>Detached riprap pillar breakwater</b>'\n",
     "    '<br>Built in 2019<br>'\n",
-    "    '<img src=\"pictures/detached_riprap_pillar.jpg\" width=\"200px\"><br>'\n",
+    "    '<img src=\"pictures/detached_riprap_pillar.JPG\" width=\"200px\"><br>'\n",
     "    'More information: <a href=\"https://publish.obsidian.md/livinglab/Mangrove+Living+Lab/1.+Introduction/1.1+Why+Mekong+Delta\" target=\"_blank\">Website link</a>',\n",
     "    \n",
     "    '<b>Detached riprap pillar breakwater</b>'\n",
     "    '<br>Built in 2019<br>'\n",
-    "    '<img src=\"pictures/detached_riprap_pillar.jpg\" width=\"200px\"><br>'\n",
+    "    '<img src=\"pictures/detached_riprap_pillar.JPG\" width=\"200px\"><br>'\n",
     "    'More information: <a href=\"https://publish.obsidian.md/livinglab/Mangrove+Living+Lab/1.+Introduction/1.1+Why+Mekong+Delta\" target=\"_blank\">Website link</a>',\n",
     "    \n",
     "    '<b>Detached riprap pillar breakwater</b>'\n",
     "    '<br>Built in 2019<br>'\n",
-    "    '<img src=\"pictures/detached_riprap_pillar.jpg\" width=\"200px\"><br>'\n",
+    "    '<img src=\"pictures/detached_riprap_pillar.JPG\" width=\"200px\"><br>'\n",
     "    'More information: <a href=\"https://publish.obsidian.md/livinglab/Mangrove+Living+Lab/1.+Introduction/1.1+Why+Mekong+Delta\" target=\"_blank\">Website link</a>',\n",
     "    \n",
     "    '<b>Detached riprap pillar breakwater</b>'\n",
     "    '<br>Built in 2019<br>'\n",
-    "    '<img src=\"pictures/detached_riprap_pillar.jpg\" width=\"200px\"><br>'\n",
+    "    '<img src=\"pictures/detached_riprap_pillar.JPG\" width=\"200px\"><br>'\n",
     "    'More information: <a href=\"https://publish.obsidian.md/livinglab/Mangrove+Living+Lab/1.+Introduction/1.1+Why+Mekong+Delta\" target=\"_blank\">Website link</a>',\n",
     "    \n",
     "    '<b>Detached riprap pillar breakwater</b>'\n",
     "    '<br>Built in 2019<br>'\n",
-    "    '<img src=\"pictures/detached_riprap_pillar.jpg\" width=\"200px\"><br>'\n",
+    "    '<img src=\"pictures/detached_riprap_pillar.JPG\" width=\"200px\"><br>'\n",
     "    'More information: <a href=\"https://publish.obsidian.md/livinglab/Mangrove+Living+Lab/1.+Introduction/1.1+Why+Mekong+Delta\" target=\"_blank\">Website link</a>',\n",
     "    \n",
     "]\n",
